[package]
name = "b2"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Lantern-chat/b2"
license = "GPL-3.0-only"

[features]
default = ["fs"]
fs = ["tokio/fs", "tokio/macros", "hex", "sha1", "tokio-stream"]

[dependencies]
base64 = "0.21.7"
tokio = { version = "1", features = ["io-util", "sync"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.57"
headers = "0.3"
typed-builder = "0.18.1"
failsafe = "1.2.0"
bytes = "1.5.0"

hex = { version = "0.4.3", optional = true }
sha1 = { version = "0.10.6", optional = true }
tokio-stream = { version = "0.1.14", optional = true, default-features = false }

[dev-dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full"] }
