[package]
name = "yab2"
description = "Yet Another Backblaze B2 Client"
authors = ["novacrazy <novacrazy@gmail.com>"]
version = "0.1.0"
edition = "2021"

include = ["src/**/*", "LICENSE-*", "README.md"]
repository = "https://github.com/Lantern-chat/yab2"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/yab2"
keywords = ["backblaze", "b2", "cloud", "storage"]

categories = ["web-programming", "api-bindings"]

[features]
default = ["fs", "pool", "reqwest_compression"]
fs = ["tokio/fs", "tokio/macros", "hex", "sha1", "futures-util"] # Enables uploading files from the filesystem
pool = ["parking_lot"]                                           # Enables the `Pool` type for reusing upload URLs
large_buffers = []                                               # Enable large buffer support, 64KiB instead of 8KiB
reqwest_compression = ["reqwest/gzip", "reqwest/deflate"]        # Enable common compression support for reqwest

[dependencies]
base64 = "0.21.7"
md-5 = "0.10.6"
tokio = { version = "1", features = ["io-util", "sync"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1.0.57"
headers = "0.3"
typed-builder = "0.18.1"
failsafe = "1.2.0"
bytes = "1.5.0"

parking_lot = { version = "0.12", optional = true }
hex = { version = "0.4.3", optional = true }
sha1 = { version = "0.10.6", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full"] }
